[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jparse"
version = "0.1.0"
description = "J-PARSE: Jacobian-based Projection Algorithm for Resolving Singularities Effectively"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jparse*"]
